fix color contrast error

--- a/css/less/less_default/less_default/default.less
+++ b/css/less/less_default/less_default/default.less
@@ -65,6 +65,7 @@ select.form-control {
 //recallage pratique
 .nopadding .modcontent {padding: 0px}
 .nomarge .breadcrumb {padding: 8px 0; margin: 8px 5px}
+caption{color: #222222}
 //Variable add et gestion admin
 
 
